[package]
name = "leak-scanner"
version = "0.1.0"
edition = "2021"
description = "Multi-vendor GitHub API-key leak scanner with responsible-disclosure helpers"
license = "MIT OR Apache-2.0"

[[bin]]
name = "leak-scanner"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
futures = "0.3"

# HTTP + retry
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"

# rate limit
governor = "0.6"

# regex
regex = "1"
once_cell = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# misc
sha2 = "0.10"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
